<resources>
    <string name="app_name">DNP</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="doctor_signup_label">Doctor</string>
    <string name="patient_signup_label">Patient</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="name_hint">Full name</string>
    <string name="type_hint">Type</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="register_hint">Register</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a valid username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_age">Age</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_nric">NRIC</string>
    <string name="hint_nationality">Nationality</string>
    <string name="hint_country">Country</string>
    <string name="hint_address">Address</string>
    <string name="hint_mode_of_notif">Mode of Notification</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">Incorrect password provided</string>
    <string name="error_invalid_password">Invalid password provided</string>
    <string name="error_invalid_email">Invalid e-mail provided</string>
    <string name="hint_servicetype">Service Type</string>
    <string name="hint_doctorname">Doctor username</string>
    <string name="hint_patientname">Patient username</string>
    <string name="hint_date">Date and Time ("MM/dd/yyyy HH:mm")</string>
    <string name="hint_healthIssue">Health Issue</string>
    <string name="hint_referrerName">Referrer Name</string>
    <string name="hint_referrerClinic">Referrer Clinic</string>
    <string name="hint_referrerAptId">Appointment Id</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logo">App Logo</string>
    <string name="treatment_text">Treatment Progress</string>
    <string name="treatment_history_text">Treatment History</string>
    <string name="appointment_list_text">Appointments</string>
    <string name="appointment_text">Appointments</string>
    <string name="make_appointment_text">Make an Appointment</string>
    <string name="make_treatment_text">Create new treatment progress</string>
    <string name="update_progress_text">Update treatment progress</string>
    <string name="change_appointment_text">Select a new Date/Time</string>
    <string name="new_appointment_text">New</string>
    <string name="manage_account_text">Manage Account</string>
    <string name="communication_text">Communication</string>
    <string name="appointment_info_hint">More information</string>
    <string name="communication_info_hint">Enter your message here</string>
    <string name="treatment_info_hint">More detail</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="communication_list_text">Communication</string>
    <string name="new_communication_text">New</string>
    <string name="make_communication_text">New Chat</string>

</resources>
