<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomepagePatientFragment"
    android:id="@+id/layout"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_alignParentEnd="true">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/applogo"
                android:layout_marginTop="-70dp"
                android:contentDescription="@string/logo" />

            <TextView
                android:id="@+id/greetingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:layout_marginTop="-60dp"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/treatment_text"
            android:id="@+id/viewTreatmentButton"
            android:textColor="@android:color/black"
            android:background="@color/colorButton"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/appointment_text"
            android:id="@+id/appointmentButton"
            android:textColor="@android:color/black"
            android:background="@color/colorButton"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/manage_account_text"
            android:id="@+id/manageAccountButton"
            android:textColor="@android:color/black"
            android:background="@color/colorButton"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/communication_text"
            android:id="@+id/communicationButton"
            android:textColor="@android:color/black"
            android:background="@color/colorButton"
            android:layout_margin="5dp" />


    </LinearLayout>

</RelativeLayout>