<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SignupFragment"
    android:id="@+id/layout"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentEnd="true">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/applogo"
            android:layout_marginTop="-70dp"
            android:contentDescription="@string/logo" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:layout_marginTop="-60dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:hint="@string/username_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:id="@+id/typeRadioGrp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/doctorRadio"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_signup_label"
                android:checked="true" />
            <RadioButton android:id="@+id/patientRadio"
                android:layout_marginLeft="20dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_signup_label" />
        </RadioGroup>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="Submit"
            android:id="@+id/submitButton"
            android:textColor="@android:color/black"
            android:elegantTextHeight="false"
            android:focusable="true"
            android:background="@color/colorButton"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/submitButton"
            android:layout_marginLeft="10dp"
            android:text="Cancel"
            android:id="@+id/cancelButton"
            android:background="@color/colorButton"
            android:textColor="@android:color/black"
            android:layout_alignTop="@+id/submitButton"
            />
    </RelativeLayout>



</RelativeLayout>
