<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SignupFragment"
    android:id="@+id/layout"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_account_text"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/username_hint"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="Save changes"
            android:id="@+id/saveButton"
            android:textColor="@android:color/black"
            android:elegantTextHeight="false"
            android:focusable="true"
            android:background="@color/colorButton"
            android:layout_gravity="center" />

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/saveButton"
            android:layout_marginLeft="10dp"
            android:text="Cancel"
            android:id="@+id/cancelButton"
            android:background="@color/colorButton"
            android:textColor="@android:color/black"
            android:layout_alignTop="@+id/saveButton" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="Log out"
            android:background="@color/colorButton"
            android:textColor="@android:color/black"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>



</RelativeLayout>
