<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomepageDoctorFragment"
    android:id="@+id/layout"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/manage_treatment_text"
            android:id="@+id/manageTreatmentButton"
            android:textColor="@android:color/black"
            android:background="@color/colorButton"
            android:layout_margin="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/appointment_text"
            android:id="@+id/appointmentButton"
            android:textColor="@android:color/black"
            android:background="@color/colorButton"
            android:layout_margin="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/manage_account_text"
            android:id="@+id/manageAccountButton"
            android:textColor="@android:color/black"
            android:background="@color/colorButton"
            android:layout_margin="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/communication_text"
            android:id="@+id/communicationButton"
            android:textColor="@android:color/black"
            android:background="@color/colorButton"
            android:layout_margin="20dp" />


    </LinearLayout>

</RelativeLayout>