<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MakeCommunicationFragment"
    android:id="@+id/layout"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:paddingBottom="70dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make_communication_text"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/doctorField"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_doctorname"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/patientField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_patientname"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/infoField"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:hint="@string/communication_info_hint"
                android:maxLines="3"
                android:allowUndo="true" />


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="Send"
            android:id="@+id/sendButton"
            android:textColor="@android:color/black"
            android:elegantTextHeight="false"
            android:focusable="true"
            android:background="@color/colorButton"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/sendButton"
            android:layout_marginLeft="10dp"
            android:text="Cancel"
            android:id="@+id/cancelButton"
            android:background="@color/colorButton"
            android:textColor="@android:color/black"
            android:layout_alignTop="@+id/sendButton"
            />
    </RelativeLayout>


</RelativeLayout>
